--- a/MatStorybook/angular.json
+++ b/MatStorybook/angular.json
@@ -52,6 +52,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.sass"
             ],
             "scripts": []
@@ -105,6 +106,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "MatStorybook"
 }
